--- a/ruoyi-generator/src/main/resources/vm/java/sub-domain.java.vm
+++ b/ruoyi-generator/src/main/resources/vm/java/sub-domain.java.vm
@@ -22,6 +22,7 @@ import com.ruoyi.common.core.domain.BaseEntity;
  */
 @Builder
 @Data
+@EqualsAndHashCode(callSuper = false)
 @NoArgsConstructor
 @AllArgsConstructor
 public class ${subClassName} extends BaseEntity
