--- a/ruoyi-generator/src/main/resources/vm/vue/index-tree.vue.vm
+++ b/ruoyi-generator/src/main/resources/vm/vue/index-tree.vue.vm
@@ -191,21 +191,22 @@
           <image-upload v-model="form.${field}"/>
         </el-form-item>
 #elseif($column.htmlType == "fileUpload")
-        <el-form-item label="${comment}">
-          <file-upload v-model="form.${field}"/>
-        </el-form-item>
+  <el-form-item label="${comment}">
+    <file-upload v-model="form.${field}"/>
+  </el-form-item>
 #elseif($column.htmlType == "editor")
-        <el-form-item label="${comment}">
-          <editor v-model="form.${field}" :min-height="192"/>
-        </el-form-item>
+  <el-form-item label="${comment}">
+    <qy-editor v-model="form.${field}" :min-height="192"/>
+  </el-form-item>
 #elseif($column.htmlType == "select" && "" != $dictType)
-        <el-form-item label="${comment}" prop="${field}">
-          <el-select v-model="form.${field}" placeholder="请选择${comment}">
-            <el-option
-              v-for="dict in dict.type.${dictType}"
-              :key="dict.value"
-              :label="dict.label"
-              #if($column.javaType == "Integer" || $column.javaType == "Long"):value="parseInt(dict.value)"#else:value="dict.value"#end
+  <el-form-item label="${comment}" prop="${field}">
+    <el-select v-model="form.${field}" placeholder="请选择${comment}">
+      <el-option
+          v-for="dict in dict.type.${dictType}"
+          :key="dict.value"
+          :label="dict.label"
+          #if($column.javaType == "Integer" || $column.javaType == "Long"):value="parseInt(dict.value)"
+          #else:value="dict.value"#end
 
             ></el-option>
           </el-select>
@@ -277,19 +278,25 @@
 </template>
 
 <script>
-import { list${BusinessName}, get${BusinessName}, del${BusinessName}, add${BusinessName}, update${BusinessName} } from "@/api/${moduleName}/${businessName}";
-import Treeselect from "@riophae/vue-treeselect";
-import "@riophae/vue-treeselect/dist/vue-treeselect.css";
+  import {
+    add${BusinessName},
+    del${BusinessName},
+    get${BusinessName},
+    list${BusinessName},
+    update${BusinessName}
+  } from "@/api/";
+  import Treeselect from "@riophae/vue-treeselect";
+  import "@riophae/vue-treeselect/dist/vue-treeselect.css";
 
-export default {
-  name: "${BusinessName}",
-#if(${dicts} != '')
-  dicts: [${dicts}],
-#end
-  components: {
-    Treeselect
-  },
-  data() {
+  export default {
+    name: "${BusinessName}",
+      #if(${dicts} != '')
+        dicts: [${dicts}],
+      #end
+    components: {
+      Treeselect
+    },
+    data() {
     return {
       // 遮罩层
       loading: true,
