--- a/ruoyi-generator/src/main/resources/vm/vue/index.vue.vm
+++ b/ruoyi-generator/src/main/resources/vm/vue/index.vue.vm
@@ -170,7 +170,7 @@
         </template>
       </el-table-column>
     </el-table>
-    
+
     <pagination
       v-show="total>0"
       :total="total"
@@ -202,21 +202,22 @@
           <image-upload v-model="form.${field}"/>
         </el-form-item>
 #elseif($column.htmlType == "fileUpload")
-        <el-form-item label="${comment}">
-          <file-upload v-model="form.${field}"/>
-        </el-form-item>
+  <el-form-item label="${comment}">
+    <file-upload v-model="form.${field}"/>
+  </el-form-item>
 #elseif($column.htmlType == "editor")
-        <el-form-item label="${comment}">
-          <editor v-model="form.${field}" :min-height="192"/>
-        </el-form-item>
+  <el-form-item label="${comment}">
+    <qy-editor v-model="form.${field}" :min-height="192"/>
+  </el-form-item>
 #elseif($column.htmlType == "select" && "" != $dictType)
-        <el-form-item label="${comment}" prop="${field}">
-          <el-select v-model="form.${field}" placeholder="请选择${comment}">
-            <el-option
-              v-for="dict in dict.type.${dictType}"
-              :key="dict.value"
-              :label="dict.label"
-              #if($column.javaType == "Integer" || $column.javaType == "Long"):value="parseInt(dict.value)"#else:value="dict.value"#end
+  <el-form-item label="${comment}" prop="${field}">
+    <el-select v-model="form.${field}" placeholder="请选择${comment}">
+      <el-option
+          v-for="dict in dict.type.${dictType}"
+          :key="dict.value"
+          :label="dict.label"
+          #if($column.javaType == "Integer" || $column.javaType == "Long"):value="parseInt(dict.value)"
+          #else:value="dict.value"#end
 
             ></el-option>
           </el-select>
@@ -347,17 +348,23 @@
 </template>
 
 <script>
-import { list${BusinessName}, get${BusinessName}, del${BusinessName}, add${BusinessName}, update${BusinessName} } from "@/api/${moduleName}/${businessName}";
+  import {
+    add${BusinessName},
+    del${BusinessName},
+    get${BusinessName},
+    list${BusinessName},
+    update${BusinessName}
+  } from "@/api/";
 
-export default {
-  name: "${BusinessName}",
-#if(${dicts} != '')
-  dicts: [${dicts}],
-#end
-  data() {
-    return {
-      // 遮罩层
-      loading: true,
+  export default {
+    name: "${BusinessName}",
+      #if(${dicts} != '')
+        dicts: [${dicts}],
+      #end
+    data() {
+      return {
+        // 遮罩层
+        loading: true,
       // 选中数组
       ids: [],
 #if($table.sub)
@@ -586,13 +593,18 @@ export default {
     handle${subClassName}SelectionChange(selection) {
       this.checked${subClassName} = selection.map(item => item.index)
     },
-#end
-    /** 导出按钮操作 */
-    handleExport() {
-      this.download('${moduleName}/${businessName}/export', {
-        ...this.queryParams
-      }, `${businessName}_#[[${new Date().getTime()}]]#.xlsx`)
-    }
+  #end
+  /** 导出按钮操作 */
+  handleExport()
+  {
+    this.download('${moduleName}/${businessName}/export', {
+      ...this.queryParams
+    }, `${businessName}_#[[${new Date().getTime()}]]#.xlsx`)
   }
-};
+  }
+  }
+  ;
 </script>
+<style scoped lang="scss">
+
+</style>
