修改富文本编辑器模板

--- a/ruoyi-generator/src/main/resources/vm/vue/index.vue.vm
+++ b/ruoyi-generator/src/main/resources/vm/vue/index.vue.vm
@@ -523,7 +523,7 @@
 #if($table.sub)
         this.${subclassName}List = response.data.${subclassName}List;
 #end
-        this.\$set(this.content, "text", this.form.textContent || "");
+        this.$set(this.content, "text", this.form.textContent || "");
         this.$set(this.content, "html", this.form.htmlContent || "");
         this.open = true;
         this.title = "修改${functionName}";
